Add a bunch of test ROMs

--- a/index.htm
+++ b/index.htm
@@ -39,6 +39,19 @@
         <div id="DEBUG">&nbsp;</div>
 
         <select id="CARTRIDGE" rows="1" onchange="gb_Insert_Cartridge(this.value,true);">
+            <option value="01-special.gb">01-special.gb</option>
+            <option value="02-interrupts.gb">02-interrupts.gb</option>
+            <option value="03-op sp,hl.gb">03-op sp,hl.gb</option>
+            <option value="04-op r,imm.gb">04-op r,imm.gb</option>
+            <option value="05-op rp.gb">05-op rp.gb</option>
+            <option value="06-ld r,r.gb">06-ld r,r.gb</option>
+            <option value="07-jr,jp,call,ret,rst.gb">07-jr,jp,call,ret,rst.gb</option>
+            <option value="08-misc instrs.gb">08-misc instrs.gb</option>
+            <option value="09-op r,r.gb">09-op r,r.gb</option>
+            <option value="10-bit ops.gb">10-bit ops.gb</option>
+            <option value="11-op a,(hl).gb">11-op a,(hl).gb</option>
+
+            <option value="cpu_instrs.gb">cpu_instrs.gb</option>
             <option value="mc-mrder.gb">PD mc-mrder</option>
             <option value="20y.gb">PD 20y</option>
             <option value="Ls.gb">PD Ls</option>
